fixed h1 h2 sizing, added fonts and spacing accorinding to Jess specs

--- a/packages/commonwealth/client/scripts/views/pages/discussions/CommentCard/CommentCard.scss
+++ b/packages/commonwealth/client/scripts/views/pages/discussions/CommentCard/CommentCard.scss
@@ -60,10 +60,9 @@
       div,
       span,
       p {
-        font-size: 16px !important;
         line-height: 24px !important;
         /* identical to box height, or 143% */
-
+        font-family: 'Silka';
         letter-spacing: 0.16px !important;
       }
     }
