--- a/packages/commonwealth/client/styles/components/quill/quill_formatted_text.scss
+++ b/packages/commonwealth/client/styles/components/quill/quill_formatted_text.scss
@@ -19,7 +19,7 @@
   h6 {
     font-family: $fonts;
     font-weight: 600;
-    margin: 1.5em 0 0.47em;
+    margin: 1em 0 0.47em;
   }
 
   > h1:first-child,
