--- a/packages/commonwealth/client/styles/shared.scss
+++ b/packages/commonwealth/client/styles/shared.scss
@@ -21,17 +21,11 @@ $sidebar-community-header-height: 56px;
 
 // base fonts
 
-$fonts: NeueHaasUnica, Silka, 'Segoe UI', sans-serif, 'Apple Color Emoji',
+$fonts: Silka, NeueHaasUnica, 'Segoe UI', sans-serif, 'Apple Color Emoji',
   'Segoe UI Emoji', 'Segoe UI Symbol';
 
-$monospace-fonts:
-  SF Mono,
-  Menlo,
-  Monaco,
-  'Lucida Sans Typewriter',
-  'Courier New',
-  Courier,
-  monospace;
+$monospace-fonts: SF Mono, Menlo, Monaco, 'Lucida Sans Typewriter',
+  'Courier New', Courier, monospace;
 
 $font-family-silka: Silka, sans-serif;
 
